Actualizada la ruta para inicio de syncronizacion
